--- a/Oceanica/pom.xml
+++ b/Oceanica/pom.xml
@@ -15,6 +15,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>24</maven.compiler.release>
-        <exec.mainClass>menea.Client.GUI.FrameCharacterSelection</exec.mainClass>
+        <exec.mainClass>menea.Client.GUI.FrameClient</exec.mainClass>
     </properties>
 </project>
